[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-caching==2.1.0",
    "flask==3.0.3",
    "gspread==6.1.2",
    "gunicorn==22.0.0",
    "oauth2client==4.1.3",
    "python-telegram-bot==20.7",
    "flask-compress==1.14",
]
