[project]
name = "finance-miniapp"
version = "0.1.0"
description = "Flask finance management app with Google Sheets integration"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-caching==2.1.0",
    "flask-compress==1.14",
    "gspread==6.1.2",
    "google-auth==2.23.0",
    "google-auth-oauthlib==1.1.0",
    "gunicorn==22.0.0",
    "python-telegram-bot==20.7",
]
